# aive-lib

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NAVIGATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  pyproject.toml  test_installation.py
docs/: fastmcp_migration.md  search_integration_plan.md
examples/: README.md  basic_video.py  educational_video.py  mcp_usage.md  search_demo.py  tiktok_automation.py
projects/: basic_video.json  educational_video_project.json  lesson_1.json
src/moviely/: __init__.py  errors.py  manager.py  models.py
src/moviely/engine/: __init__.py  actions.py  renderer.py
src/moviely/server/: __init__.py  mcp_agent.py
src/moviely/services/: __init__.py  search.py
src/moviely/storage/: __init__.py  json_store.py  memory_store.py
src/moviely/utils/: __init__.py  assets.py  templates.py
src/templates/: edu_landscape.json  tiktok_vertical.json  youtube_landscape.json
tests/: __init__.py  test_actions.py  test_advanced_add.py  test_manager.py  test_models.py  test_search.py  test_storage.py
