[project]
name = "moviely"
version = "0.1.0"
description = "Video automation framework for Python and LLMs"
readme = "README.md"
authors = [
    { name = "AndrewPopesku", email = "andepopeskua@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "mcp>=1.25.0",
    "moviepy>=2.2.1",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
moviely-server = "moviely.server.mcp_agent:main"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]
